--- a/ex2/ex2/Base.lproj/Main.storyboard
+++ b/ex2/ex2/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                 </constraints>
                                 <state key="normal" title="Update" image="refresh-button-icon-63755"/>
                                 <connections>
-                                    <action selector="updatecoreData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="T6J-yu-ccp"/>
+                                    <action selector="updateCoreDataAtUsersRequest:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tRM-j4-YWL"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="23/10/1997" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="96c-xw-gUU">
