Final commit, fixed localization bug, added sleep to prevent thread problems, cleaned code

--- a/ex2/ex2/Base.lproj/Main.storyboard
+++ b/ex2/ex2/Base.lproj/Main.storyboard
@@ -26,10 +26,16 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Xct-DA-PMK"/>
                                 </connections>
                             </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last update:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6d-vE-osd">
+                                <rect key="frame" x="143" y="642" width="138" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t5J-7v-pDd">
-                                <rect key="frame" x="335" y="69" width="30" height="40"/>
+                                <rect key="frame" x="106" y="636" width="31" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="8pZ-lv-zhT"/>
+                                    <constraint firstAttribute="width" constant="31" id="jwI-gw-V7e"/>
                                 </constraints>
                                 <state key="normal" title="Update" image="refresh-button-icon-63755"/>
                                 <connections>
@@ -37,10 +43,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="23/10/1997" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="96c-xw-gUU">
-                                <rect key="frame" x="262" y="643" width="105" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="105" id="tqp-yP-7xo"/>
-                                </constraints>
+                                <rect key="frame" x="286" y="642" width="73" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -52,20 +55,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FU2-jY-0jp">
-                                <rect key="frame" x="0.0" y="64" width="30" height="30"/>
+                                <rect key="frame" x="7" y="64" width="20" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="NpL-sU-EN1"/>
+                                    <constraint firstAttribute="width" constant="20" id="fu9-7z-EY9"/>
                                 </constraints>
                                 <state key="normal" title="en"/>
                                 <connections>
                                     <action selector="goToEnglish:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZYd-tG-s65"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CoK-0u-Ppa">
-                                <rect key="frame" x="30" y="64" width="30" height="30"/>
-                                <state key="normal" title="fr"/>
-                                <connections>
-                                    <action selector="goToFrench:" destination="BYZ-38-t0r" eventType="touchUpInside" id="916-a6-IBI"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T9i-Ck-KRV">
@@ -75,37 +71,38 @@
                                     <action selector="addMarksOnMapView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cgF-d7-USx"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last update:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6d-vE-osd">
-                                <rect key="frame" x="148" y="643" width="106" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CoK-0u-Ppa">
+                                <rect key="frame" x="35" y="64" width="30" height="30"/>
+                                <state key="normal" title="fr"/>
+                                <connections>
+                                    <action selector="goToFrench:" destination="BYZ-38-t0r" eventType="touchUpInside" id="916-a6-IBI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="0f9-JG-vPc" firstAttribute="top" secondItem="T9i-Ck-KRV" secondAttribute="bottom" constant="5" id="0AI-nK-cGW"/>
-                            <constraint firstItem="w0h-Mr-eNq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="48" id="9D9-nc-gHv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="x6d-vE-osd" secondAttribute="bottom" constant="7" id="B1N-2f-0KA"/>
-                            <constraint firstItem="x6d-vE-osd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="148" id="CoS-eR-XxF"/>
-                            <constraint firstItem="FU2-jY-0jp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GRE-sm-fuy"/>
-                            <constraint firstItem="t5J-7v-pDd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="Kaw-sQ-wsB"/>
-                            <constraint firstItem="x6d-vE-osd" firstAttribute="top" secondItem="0f9-JG-vPc" secondAttribute="bottom" constant="8" symbolic="YES" id="Lq5-WK-d9Z"/>
-                            <constraint firstItem="CoK-0u-Ppa" firstAttribute="leading" secondItem="FU2-jY-0jp" secondAttribute="trailing" id="R2n-EP-1Tj"/>
-                            <constraint firstItem="T9i-Ck-KRV" firstAttribute="top" secondItem="w0h-Mr-eNq" secondAttribute="bottom" constant="8" symbolic="YES" id="R3x-WN-WM1"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="96c-xw-gUU" secondAttribute="trailing" constant="8" id="TGN-wo-0ZO"/>
-                            <constraint firstItem="x6d-vE-osd" firstAttribute="baseline" secondItem="96c-xw-gUU" secondAttribute="baseline" id="VPU-gd-wmc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="T9i-Ck-KRV" secondAttribute="trailing" constant="9" id="WD6-NA-c6G"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="t5J-7v-pDd" secondAttribute="trailing" constant="10" id="XhE-Hx-Azw"/>
-                            <constraint firstItem="w0h-Mr-eNq" firstAttribute="centerX" secondItem="0f9-JG-vPc" secondAttribute="centerX" id="grz-fX-W9l"/>
-                            <constraint firstItem="FU2-jY-0jp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="isg-rX-8oG"/>
-                            <constraint firstItem="CoK-0u-Ppa" firstAttribute="baseline" secondItem="FU2-jY-0jp" secondAttribute="firstBaseline" id="jRn-eY-dbL"/>
-                            <constraint firstItem="FU2-jY-0jp" firstAttribute="leading" secondItem="0f9-JG-vPc" secondAttribute="leading" id="oak-vg-lxy"/>
-                            <constraint firstAttribute="trailing" secondItem="0f9-JG-vPc" secondAttribute="trailing" id="qKG-QX-46a"/>
-                            <constraint firstItem="FU2-jY-0jp" firstAttribute="baseline" secondItem="CoK-0u-Ppa" secondAttribute="baseline" id="uSf-Qn-95W"/>
-                            <constraint firstItem="96c-xw-gUU" firstAttribute="leading" secondItem="x6d-vE-osd" secondAttribute="trailing" constant="8" symbolic="YES" id="yJd-Tb-Pf8"/>
-                            <constraint firstItem="T9i-Ck-KRV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="58" id="z7J-fj-HpG"/>
-                            <constraint firstItem="CoK-0u-Ppa" firstAttribute="baseline" secondItem="t5J-7v-pDd" secondAttribute="baseline" id="zWu-M3-2Dd"/>
+                            <constraint firstItem="FU2-jY-0jp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4ru-cd-w90"/>
+                            <constraint firstItem="96c-xw-gUU" firstAttribute="leading" secondItem="x6d-vE-osd" secondAttribute="trailing" constant="5" id="HE5-rG-LXY"/>
+                            <constraint firstItem="x6d-vE-osd" firstAttribute="top" secondItem="0f9-JG-vPc" secondAttribute="bottom" constant="7" id="I6C-3h-kfx"/>
+                            <constraint firstItem="T9i-Ck-KRV" firstAttribute="top" secondItem="w0h-Mr-eNq" secondAttribute="bottom" constant="8" symbolic="YES" id="IZc-p1-EEV"/>
+                            <constraint firstItem="w0h-Mr-eNq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="48" id="JcR-C1-GZN"/>
+                            <constraint firstItem="FU2-jY-0jp" firstAttribute="baseline" secondItem="CoK-0u-Ppa" secondAttribute="baseline" id="JsH-DD-mfh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="t5J-7v-pDd" secondAttribute="bottom" constant="2" id="MgJ-Ll-DTE"/>
+                            <constraint firstItem="0f9-JG-vPc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="S2j-IQ-dhp"/>
+                            <constraint firstAttribute="trailing" secondItem="0f9-JG-vPc" secondAttribute="trailing" id="UIs-WH-51M"/>
+                            <constraint firstItem="x6d-vE-osd" firstAttribute="baseline" secondItem="96c-xw-gUU" secondAttribute="baseline" id="XLR-ds-vtI"/>
+                            <constraint firstItem="x6d-vE-osd" firstAttribute="leading" secondItem="t5J-7v-pDd" secondAttribute="trailing" constant="6" id="Yii-xR-vpO"/>
+                            <constraint firstItem="w0h-Mr-eNq" firstAttribute="leading" secondItem="t5J-7v-pDd" secondAttribute="leading" id="Zf5-To-MOv"/>
+                            <constraint firstItem="96c-xw-gUU" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Zuk-ZA-lgR"/>
+                            <constraint firstItem="t5J-7v-pDd" firstAttribute="top" secondItem="0f9-JG-vPc" secondAttribute="bottom" constant="1" id="aJx-vN-CKP"/>
+                            <constraint firstItem="T9i-Ck-KRV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="58" id="kPv-Jw-jc7"/>
+                            <constraint firstItem="t5J-7v-pDd" firstAttribute="centerY" secondItem="x6d-vE-osd" secondAttribute="centerY" id="muG-N1-vMA"/>
+                            <constraint firstItem="w0h-Mr-eNq" firstAttribute="centerX" secondItem="0f9-JG-vPc" secondAttribute="centerX" id="pJ9-HJ-WF9"/>
+                            <constraint firstItem="CoK-0u-Ppa" firstAttribute="leading" secondItem="FU2-jY-0jp" secondAttribute="trailing" constant="8" symbolic="YES" id="qU8-ZD-Kwx"/>
+                            <constraint firstItem="T9i-Ck-KRV" firstAttribute="centerX" secondItem="x6d-vE-osd" secondAttribute="centerX" id="rKB-rI-svh"/>
+                            <constraint firstItem="FU2-jY-0jp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="7" id="tOI-Sy-E4M"/>
+                            <constraint firstItem="96c-xw-gUU" firstAttribute="baseline" secondItem="x6d-vE-osd" secondAttribute="firstBaseline" id="wXV-ZI-EDE"/>
+                            <constraint firstItem="0f9-JG-vPc" firstAttribute="top" secondItem="T9i-Ck-KRV" secondAttribute="bottom" constant="5" id="yzH-oJ-DdM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -120,7 +117,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="964" y="30.134932533733135"/>
+            <point key="canvasLocation" x="963.5" y="29.5"/>
         </scene>
         <!--Second View Controller-->
         <scene sceneID="mHG-9j-RwN">
